# Computer-Graphics-Coursework

./: CMakeLists.txt  README.md  Self_assessment_document.docx  ~$lf_assessment_document.docx
assets/: readme.txt
common/: camera.cpp  camera.hpp  maths.cpp  maths.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
shaders/: normal_mapping.frag  normal_mapping.vert  simple.frag  simple.vert
source/: coursework.cpp
src/: basketball.cpp  basketball.hpp  basketball_court.cpp  basketball_court.hpp  basketball_player.cpp  basketball_player.hpp  coursework.cpp  rim.cpp  rim.hpp
